# crud_FastApi_sql_model

./: README.md  criar_tabelas.py  main.py  pyproject.toml
.github/workflows/: main.yml
api/v1/endpoints/: cursos.py
core/: configs.py  database.py  deps.py
models/: __all_models.py  curso_model.py
