[tool.poetry]
name = "crud_fastapi_sql_model"
version = "0.1.0"
description = ""
authors = ["mielesantos <mielesnts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.1"
uvicorn = "^0.18.2"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.26.0"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
flake8 = "^5.0.4"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[flake8]
line_length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
